force-app/main/default/objects/BitForce_Status_Log__c/BitForce_Status_Log__c.object-meta.xml
<CustomObject>
    <label>BitForce Status Log</label>
    <nameField>
        <label>BitForce Status Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BitForce Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>