force-app/main/default/objects/BitForce_Status_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>