force-app/main/default/objects/BitForce_Status_Log__c/fields/MP_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>MP_Payment_Id__c</fullName>
    <label>MP Payment Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>