force-app/main/default/objects/BitForce_Status_Log__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>MP_Payment__c</referenceTo>
    <relationshipLabel>BitForce Status Logs</relationshipLabel>
    <relationshipName>BitForce_Status_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>