force-app/main/default/objects/BitForce_Status_Log__c/fields/Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Status_Details__c</fullName>
    <label>Status Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>